Added more textures, Added a creative tab for the mod.

--- a/src/main/resources/assets/vanillaExpansion/lang/en_US.lang
+++ b/src/main/resources/assets/vanillaExpansion/lang/en_US.lang
@@ -1,3 +1,5 @@
+itemGroup.vanillaExpansionTab=Vanilla Expansion
+
 tile.vanillaExpansion_goldBlockHalfSlab.name=Block of Gold Slab
 tile.vanillaExpansion_ironBlockHalfSlab.name=Block of Iron Slab
 tile.vanillaExpansion_diamondBlockHalfSlab.name=Block of Diamond Slab
