Fixed missing files from the last commit.

--- a/src/main/resources/assets/vanillaExpansion/lang/en_US.lang
+++ b/src/main/resources/assets/vanillaExpansion/lang/en_US.lang
@@ -166,3 +166,139 @@ item.strawberryIceCream.name=Strawberry Ice Cream
 tile.grape.name=Grape Plant
 tile.lettuce.name=Lettuce Plant
 tile.strawberry.name=Strawberry Plant
+
+tile.coloredStoneBricks.black.name=Black Stone Bricks
+tile.coloredStoneBricks.white.name=White Stone Bricks
+tile.coloredStoneBricks.silver.name=Silver Stone Bricks
+tile.coloredStoneBricks.gray.name=Gray Stone Bricks
+tile.coloredStoneBricks.blue.name=Blue Stone Bricks
+tile.coloredStoneBricks.cyan.name=Cyan Stone Bricks
+tile.coloredStoneBricks.light_blue.name=Light Blue Stone Bricks
+tile.coloredStoneBricks.red.name=Red Stone Bricks
+tile.coloredStoneBricks.pink.name=Pink Stone Bricks
+tile.coloredStoneBricks.orange.name=Orange Stone Bricks
+tile.coloredStoneBricks.brown.name=Brown Stone Bricks
+tile.coloredStoneBricks.lime.name=Lime Stone Bricks
+tile.coloredStoneBricks.green.name=Green Stone Bricks
+tile.coloredStoneBricks.yellow.name=Yellow Stone Bricks
+tile.coloredStoneBricks.purple.name=Purple Stone Bricks
+tile.coloredStoneBricks.magenta.name=Magenta Stone Bricks
+
+tile.coloredWoodPlanks.black.name=Black Wood Planks
+tile.coloredWoodPlanks.white.name=White Wood Planks
+tile.coloredWoodPlanks.silver.name=Silver Wood Planks
+tile.coloredWoodPlanks.gray.name=Gray Wood Planks
+tile.coloredWoodPlanks.blue.name=Blue Wood Planks
+tile.coloredWoodPlanks.cyan.name=Cyan Wood Planks
+tile.coloredWoodPlanks.light_blue.name=Light Blue Wood Planks
+tile.coloredWoodPlanks.red.name=Red Wood Planks
+tile.coloredWoodPlanks.pink.name=Pink Wood Planks
+tile.coloredWoodPlanks.orange.name=Orange Wood Planks
+tile.coloredWoodPlanks.brown.name=Brown Wood Planks
+tile.coloredWoodPlanks.lime.name=Lime Wood Planks
+tile.coloredWoodPlanks.green.name=Green Wood Planks
+tile.coloredWoodPlanks.yellow.name=Yellow Wood Planks
+tile.coloredWoodPlanks.purple.name=Purple Wood Planks
+tile.coloredWoodPlanks.magenta.name=Magenta Wood Planks
+
+tile.coloredWoodPlankButton_black.name=Black Wood Button
+tile.coloredWoodPlankButton_white.name=White Wood Button
+tile.coloredWoodPlankButton_silver.name=Silver Wood Button
+tile.coloredWoodPlankButton_gray.name=Gray Wood Button
+tile.coloredWoodPlankButton_blue.name=Blue Wood Button
+tile.coloredWoodPlankButton_cyan.name=Cyan Wood Button
+tile.coloredWoodPlankButton_light_blue.name=Light Blue Wood Button
+tile.coloredWoodPlankButton_red.name=Red Wood Button
+tile.coloredWoodPlankButton_pink.name=Pink Wood Button
+tile.coloredWoodPlankButton_orange.name=Orange Wood Button
+tile.coloredWoodPlankButton_brown.name=Brown Wood Button
+tile.coloredWoodPlankButton_lime.name=Lime Wood Button
+tile.coloredWoodPlankButton_green.name=Green Wood Button
+tile.coloredWoodPlankButton_yellow.name=Yellow Wood Button
+tile.coloredWoodPlankButton_purple.name=Purple Wood Button
+tile.coloredWoodPlankButton_magenta.name=Magenta Wood Planks
+
+tile.coloredStoneButton_black.name=Black Stone Button
+tile.coloredStoneButton_white.name=White Stone Button
+tile.coloredStoneButton_silver.name=Silver Stone Button
+tile.coloredStoneButton_gray.name=Gray Stone Button
+tile.coloredStoneButton_blue.name=Blue Stone Button
+tile.coloredStoneButton_cyan.name=Cyan Stone Button
+tile.coloredStoneButton_light_blue.name=Light Blue Stone Button
+tile.coloredStoneButton_red.name=Red Stone Button
+tile.coloredStoneButton_pink.name=Pink Stone Button
+tile.coloredStoneButton_orange.name=Orange Stone Button
+tile.coloredStoneButton_brown.name=Brown Stone Button
+tile.coloredStoneButton_lime.name=Lime Stone Button
+tile.coloredStoneButton_green.name=Green Stone Button
+tile.coloredStoneButton_yellow.name=Yellow Stone Button
+tile.coloredStoneButton_purple.name=Purple Stone Button
+tile.coloredStoneButton_magenta.name=Magenta Stone Button
+
+tile.coloredWoodPlankFences_black.name=Black Wood Fence
+tile.coloredWoodPlankFences_white.name=White Wood Fence
+tile.coloredWoodPlankFences_silver.name=Silver Wood Fence
+tile.coloredWoodPlankFences_gray.name=Gray Wood Fence
+tile.coloredWoodPlankFences_blue.name=Blue Wood Fence
+tile.coloredWoodPlankFences_cyan.name=Cyan Wood Fence
+tile.coloredWoodPlankFences_light_blue.name=Light Blue Wood Fence
+tile.coloredWoodPlankFences_red.name=Red Wood Fence
+tile.coloredWoodPlankFences_pink.name=Pink Wood Fence
+tile.coloredWoodPlankFences_orange.name=Orange Wood Fence
+tile.coloredWoodPlankFences_brown.name=Brown Wood Fence
+tile.coloredWoodPlankFences_lime.name=Lime Wood Fence
+tile.coloredWoodPlankFences_green.name=Green Wood Fence
+tile.coloredWoodPlankFences_yellow.name=Yellow Wood Fence
+tile.coloredWoodPlankFences_purple.name=Purple Wood Fence
+tile.coloredWoodPlankFences_magenta.name=Magenta Wood Fence
+
+tile.coloredDoor_black.name=Black Wood Door
+tile.coloredDoor_white.name=White Wood Door
+tile.coloredDoor_silver.name=Silver Wood Door
+tile.coloredDoor_gray.name=Gray Wood Door
+tile.coloredDoor_blue.name=Blue Wood Door
+tile.coloredDoor_cyan.name=Cyan Wood Door
+tile.coloredDoor_light_blue.name=Light Blue Wood Door
+tile.coloredDoor_red.name=Red Wood Door
+tile.coloredDoor_pink.name=Pink Wood Door
+tile.coloredDoor_orange.name=Orange Wood Door
+tile.coloredDoor_brown.name=Brown Wood Door
+tile.coloredDoor_lime.name=Lime Wood Door
+tile.coloredDoor_green.name=Green Wood Door
+tile.coloredDoor_yellow.name=Yellow Wood Door
+tile.coloredDoor_purple.name=Purple Wood Door
+tile.coloredDoor_magenta.name=Magenta Wood Door
+
+item.door_colored_black.name=Black Wood Door
+item.door_colored_white.name=White Wood Door
+item.door_colored_silver.name=Silver Wood Door
+item.door_colored_gray.name=Gray Wood Door
+item.door_colored_blue.name=Blue Wood Door
+item.door_colored_cyan.name=Cyan Wood Door
+item.door_colored_light_blue.name=Light Blue Wood Door
+item.door_colored_red.name=Red Wood Door
+item.door_colored_pink.name=Pink Wood Door
+item.door_colored_orange.name=Orange Wood Door
+item.door_colored_brown.name=Brown Wood Door
+item.door_colored_lime.name=Lime Wood Door
+item.door_colored_green.name=Green Wood Door
+item.door_colored_yellow.name=Yellow Wood Door
+item.door_colored_purple.name=Purple Wood Door
+item.door_colored_magenta.name=Magenta Wood Door
+
+tile.coloredTrapDoor.black.name=Black Wood Trapdoor
+tile.coloredTrapDoor.white.name=White Wood Trapdoor
+tile.coloredTrapDoor.silver.name=Silver Wood Trapdoor
+tile.coloredTrapDoor.gray.name=Gray Wood Trapdoor
+tile.coloredTrapDoor.blue.name=Blue Wood Trapdoor
+tile.coloredTrapDoor.cyan.name=Cyan Wood Trapdoor
+tile.coloredTrapDoor.light_blue.name=Light Blue Wood Trapdoor
+tile.coloredTrapDoor.red.name=Red Wood Trapdoor
+tile.coloredTrapDoor.pink.name=Pink Wood Trapdoor
+tile.coloredTrapDoor.orange.name=Orange Wood Trapdoor
+tile.coloredTrapDoor.brown.name=Brown Wood Trapdoor
+tile.coloredTrapDoor.lime.name=Lime Wood Trapdoor
+tile.coloredTrapDoor.green.name=Green Wood Trapdoor
+tile.coloredTrapDoor.yellow.name=Yellow Wood Trapdoor
+tile.coloredTrapDoor.purple.name=Purple Wood Trapdoor
+tile.coloredTrapDoor.magenta.name=Magenta Wood Trapdoor
